# hyprgrass

./: hyprpm.toml  meson.build
.github/workflows/: checks.yml  pin-latest-hyprland.yml  update-flake.yml
docs/: configuration.md
src/: main.cpp
